--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 dj-database-url==0.3.0
-# dj-static==0.0.5
-git+https://github.com/kennethreitz/dj-static.git@b02979384d7c7a6944375c5959224bff40c2035a#egg=dj-static
 django-allauth==0.17.0
 django-guardian==1.2.0
+git+https://github.com/kennethreitz/dj-static.git@b02979384d7c7a6944375c5959224bff40c2035a#egg=dj-static
 gunicorn==19.0.0
 https://www.djangoproject.com/download/1.7.b4/tarball/#egg=Django
 iso8601==0.1.10
+mandrill==1.0.53
 Markdown==2.4.1
 oauthlib==0.6.3
 psycopg2==2.5.3
 pystache==0.5.4
 python3-openid==3.0.4
+raven==5.0.0
 requests-oauthlib==0.4.1
 requests==2.3.0
 six==1.7.2
