--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 dj-database-url==0.3.0
+Django==1.7
 django-allauth==0.17.0
 django-guardian==1.2.0
 git+https://github.com/kennethreitz/dj-static.git@b02979384d7c7a6944375c5959224bff40c2035a#egg=dj-static
 gunicorn==19.0.0
-https://www.djangoproject.com/download/1.7.b4/tarball/#egg=Django
 iso8601==0.1.10
 mandrill==1.0.53
 Markdown==2.4.1
