--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,13 @@
 machine:
   python:
     version: 3.4.1
+
 test:
   override:
     - python3.4 manage.py test -v2 --settings=codinggrace_django.settings
+
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: coding-grace
