updated requirements.txt with grapelli

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 dj-database-url==0.3.0
-Django==1.8.4
 django-allauth==0.17.0
+django-grappelli==2.7.1
 django-guardian==1.2.0
+Django==1.8.4
 git+https://github.com/kennethreitz/dj-static.git@b02979384d7c7a6944375c5959224bff40c2035a#egg=dj-static
 gunicorn==19.0.0
 iso8601==0.1.10
